...
    <string name="action_new_list">Nowa lista</string>
    <string name="action_create">Utwórz</string>
    <string name="action_save">Zapisz</string>
    <string name="action_cancel">Anuluj</string>
    <string name="action_add">Dodaj</string>
    <string name="action_rename">Zmień nazwę</string>
    <string name="action_delete">Usuń</string>
    <string name="action_undo">Cofnij</string>
    <string name="action_edit">Edytuj</string>
    <string name="action_check">Oznacz jako kupione</string>
    <string name="action_uncheck">Przywróć na listę</string>
    <string name="action_move_up">Przesuń wyżej</string>
    <string name="action_move_down">Przesuń niżej</string>
    <string name="action_category_order">Kolejność kategorii</string>
...
